# scipion-em-fidder

./: CHANGES.txt  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish_and_tag.yml
fidder/: __init__.py  bibtex.py  constants.py  protocols.conf
fidder/protocols/: __init__.py  protocol_detect_and_erase_fiducials.py
fidder/tests/: tests_fidder.py
